--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="./eyeMovement.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
 <body>
